--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        
+        <div class="wrapper">
+            <div class="game-details">
+                <span class="score">Score: 0</span>
+                <span class="high-score">High-Score: 10</span>
+            </div>
+            <div class="play-board">
+
+            </div>
+        </div>
     </body>
 </html>
